tests/src/frontend/typechecking/invalid/pattern_match_inter1.sk
base class B1
base class B2
class C() extends B1, B2
class D() extends B1

fun foo<T: B1 & B2>(x: T): void {
  x match {
  | C() -> void
  | D() -> void
  }
}
